# granim-viz

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
examples/: bfs.py  binary_search.py  binpow.py  bst.py  custom_node.py  cycle.py  cyclecustom.py  dedup.py  dijkstra.py  duplicates.py  edit_distance.py  expr_graph.py  flood_fill.py  floyd.py  parking_lot.py  preorder.py  preordercustom.py  queue.py  quicksort.py  randompointercustom.py  reverse_iterative.py  reverse_recursive.py  rnn_bptt.py
src/granim/: __init__.py  themes.py
src/granim/core/: events.py  recorder.py  steps.py  trace.py
src/granim/layout/: __init__.py  force.py  layered.py  linear.py  tidy.py
src/granim/render/: compiler.py  html.py
src/granim/render/player/: player.css  player.js  template.html
src/granim/structures/: array.py  base.py  custom.py  graph.py  linked_list.py  matrix.py  tracked.py  tree.py
tests/: run_tests.py  test_granim.py  verify_html.js
tools/: build_dist.py
